# prediction-market-maker-bot

./: .gitattributes  .gitignore  Cargo.toml  README.md  simulation_report.csv  trace.json
src/: execution_engine.rs  logger.rs  main.rs  market_maker.rs  market_state.rs
