[package]
name = "quant_bot_rust"
version = "0.1.0"
edition = "2021"
description = "A market-making execution bot for binary event contracts (prediction markets)"
authors = ["Quant Bot Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rand = "0.8"
rand_chacha = "0.3"
chrono = { version = "0.4", features = ["serde"] }
